Testes do dashboard

--- a/front-end/my-app/src/app/empresa/dashboard/vagas/criar/criarvaga.css
+++ b/front-end/my-app/src/app/empresa/dashboard/vagas/criar/criarvaga.css
@@ -43,6 +43,7 @@
 }
 .select__control input {
     box-shadow: none !important;
+    background-color: inherit;
 }
 .form-container {
     max-width: 350px;
