--- a/front-end/my-app/src/app/empresa/page.css
+++ b/front-end/my-app/src/app/empresa/page.css
@@ -104,7 +104,7 @@ h2{
 .careernest h1 {
   font-size: 2rem;
   font-weight: 700;
-  color: #003366; 
+  color: #025259; 
   margin-bottom: 1.5rem;
   text-align: center;
 }
@@ -116,6 +116,75 @@ h2{
   margin-bottom: 1.25rem;
   text-align: justify;
 }
+
+.card-depoimento {
+  display: flex;
+  align-items: flex-start;
+  background-color: #025259;
+  padding: 1.5rem 2rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  margin-bottom: 1.8rem;
+  color: #fff;
+  gap: 1.5rem;
+}
+
+.titulo-depoimentos {
+  color: #bd4b0d;
+  font-weight: bold;
+}
+
+.imagem-com-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-depoimento {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+}
+
+.info-depoimento {
+  text-align: center;
+}
+
+.info-depoimento h6 {
+  margin: 0.2rem 0;
+  font-weight: bold;
+  font-size: 1.05rem;
+  color: #ffffff;
+}
+
+.info-depoimento small {
+  color: #cfe6e3;
+  font-size: 0.9rem;
+}
+
+.comentario {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  font-style: italic;
+  color: #f1f1f1;
+  text-align: center; 
+}
+@media (max-width: 576px) {
+  .card-depoimento {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .comentario {
+    text-align: center;
+    margin-top: 1rem;
+  }
+}
+
+
+
 
 
 
