--- a/front-end/my-app/src/app/empresa/dashboard/dashboard.css
+++ b/front-end/my-app/src/app/empresa/dashboard/dashboard.css
@@ -9,6 +9,23 @@
     --verde-escuro: #025259
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.container .container-sidebar{
+    display: flex;
+    width: 100%;
+}
+
 .btn-sair {
     all: unset;
     background-color: #FF0000;
@@ -36,7 +53,7 @@
 }
 
 .side-bar .nav-link:hover {
-    box-shadow: 0 0 0 1px var(--laranja);
+    background-color: #776c6c6b;
     color: #fff;
 }
 
@@ -140,6 +157,15 @@
 .searchvaga{
     width: 30%;
 }
+
+
+
+.sidebar {
+    margin-left: 0;
+    padding-left: 0;
+    min-height: 100vh;
+}
+
 
 @media (max-width: 576px) {
     .searchvaga{
